--- a/2023/package.json
+++ b/2023/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.10.2",
-    "tsm": "^2.3.0"
+    "tsm": "^2.3.0",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "fs-extra": "^11.2.0"
