--- a/2023/package.json
+++ b/2023/package.json
@@ -10,10 +10,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.10.2",
+    "parcel": "^2.10.3",
     "tsm": "^2.3.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/d3": "^7.4.3",
+    "@viz-js/viz": "^3.2.3",
+    "d3": "^7.8.5",
     "fs-extra": "^11.2.0"
   }
 }
